@@ -2,6 +2,7 @@ package no.sikt.nva.brage.migration.mapper;
 
 import static java.util.Objects.nonNull;
 import static no.sikt.nva.brage.migration.mapper.PublicationInstanceMapper.isAnthology;
+import static no.sikt.nva.brage.migration.mapper.PublicationInstanceMapper.isBookOfAbstracts;
 import static no.sikt.nva.brage.migration.mapper.PublicationInstanceMapper.isConferenceReport;
 import static no.sikt.nva.brage.migration.mapper.PublicationInstanceMapper.isEditorial;
 import static no.sikt.nva.brage.migration.mapper.PublicationInstanceMapper.isExhibitionCatalog;
@@ -11,7 +12,6 @@ import static no.sikt.nva.brage.migration.mapper.PublicationInstanceMapper.isPro
 import static no.sikt.nva.brage.migration.mapper.PublicationInstanceMapper.isReaderOpinion;
 import static no.sikt.nva.brage.migration.mapper.PublicationInstanceMapper.isVisualArts;
 import java.net.URI;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -19,6 +19,7 @@ import java.util.stream.Collectors;
 import no.sikt.nva.brage.migration.NvaType;
 import no.sikt.nva.brage.migration.lambda.PublicationContextException;
 import no.sikt.nva.brage.migration.record.EntityDescription;
+import no.sikt.nva.brage.migration.record.PartOfSeries;
 import no.sikt.nva.brage.migration.record.Publication;
 import no.sikt.nva.brage.migration.record.PublicationDate;
 import no.sikt.nva.brage.migration.record.PublicationDateNva;
@@ -79,7 +80,8 @@ public final class PublicationContextMapper {
         if (isSupportedReportType(brageRecord)) {
             return buildPublicationContextWhenReport(brageRecord);
         }
-        if (isUnconfirmedJournal(brageRecord) || isUnconfirmedScientificArticle(brageRecord)) {
+        if (isUnconfirmedJournal(brageRecord) || isUnconfirmedScientificArticle(brageRecord)
+        || isUnconfirmedJournalIssue(brageRecord)) {
             return buildPublicationContextForUnconfirmedJournal(brageRecord);
         }
         if (isArticle(brageRecord)) {
@@ -114,6 +116,10 @@ public final class PublicationContextMapper {
         } else {
             throw new PublicationContextException(NOT_SUPPORTED_TYPE + brageRecord.getType().getNva());
         }
+    }
+
+    private static boolean isUnconfirmedJournalIssue(Record record) {
+        return NvaType.JOURNAL_ISSUE.getValue().equals(record.getType().getNva()) && !hasJournalId(record);
     }
 
     private static boolean isEvent(Record brageRecord) {
@@ -151,7 +157,8 @@ public final class PublicationContextMapper {
         return isReport(brageRecord)
                || isResearchReport(brageRecord)
                || isReportWorkingPaper(brageRecord)
-               || isConferenceReport(brageRecord);
+               || isConferenceReport(brageRecord)
+               || isBookOfAbstracts(brageRecord);
     }
 
     public static boolean isMusic(Record brageRecord) {
@@ -252,7 +259,12 @@ public final class PublicationContextMapper {
                || isScientificArticle(brageRecord)
                || isMediaFeatureArticle(brageRecord)
                || isProfessionalArticle(brageRecord)
-               || isEditorial(brageRecord);
+               || isEditorial(brageRecord)
+               || isJournalIssue(brageRecord);
+    }
+
+    public static boolean isJournalIssue(Record record) {
+        return NvaType.JOURNAL_ISSUE.getValue().equals(record.getType().getNva());
     }
 
     private static PublicationContext buildPublicationContextWhenMediaContribution() {
@@ -280,7 +292,7 @@ public final class PublicationContextMapper {
         if (issnList.size() > SIZE_ONE) {
             return new UnconfirmedJournal(extractJournalTitle(brageRecord), issnList.get(0), issnList.get(1));
         } else {
-            var issn = !issnList.isEmpty() ? issnList.get(0) : null;
+            var issn = !issnList.isEmpty() ? issnList.getFirst() : null;
             return new UnconfirmedJournal(extractJournalTitle(brageRecord), issn, null);
         }
     }
@@ -375,19 +387,6 @@ public final class PublicationContextMapper {
                    .orElse(null);
     }
 
-    private static String extractPotentialSeriesNumberValue(String potentialSeriesNumber) {
-        if (potentialSeriesNumber.contains(":")) {
-            var seriesNumberAndYear = Arrays.asList(potentialSeriesNumber.split(":"));
-            return Collections.max(seriesNumberAndYear);
-        }
-
-        if (potentialSeriesNumber.contains("/")) {
-            var seriesNumberAndYear = Arrays.asList(potentialSeriesNumber.split("/"));
-            return Collections.max(seriesNumberAndYear);
-        }
-        return potentialSeriesNumber;
-    }
-
     private static PublicationContext buildPublicationContextWhenBook(Record brageRecord)
         throws InvalidIssnException {
         return new Book.BookBuilder().withPublisher(extractPublisher(brageRecord))
@@ -410,22 +409,8 @@ public final class PublicationContextMapper {
     private static String extractSeriesNumber(Record brageRecord) {
         return Optional.ofNullable(brageRecord.getPublication())
                    .map(Publication::getPartOfSeries)
-                   .map(PublicationContextMapper::extractPartOfSeriesValue)
+                   .map(PartOfSeries::getNumber)
                    .orElse(null);
-    }
-
-    private static String extractPartOfSeriesValue(String partOfSeriesValue) {
-        return Optional.ofNullable(partOfSeriesValue)
-                   .map(value -> hasNumber(value) ? extractPotentialSeriesNumberValue(getNumber(value)) : null)
-                   .orElse(null);
-    }
-
-    private static String getNumber(String value) {
-        return value.split(";")[1];
-    }
-
-    private static boolean hasNumber(String value) {
-        return value.split(";").length == HAS_BOTH_SERIES_TITLE_AND_SERIES_NUMBER;
     }
 
     @SuppressWarnings("PMD.NullAssignment")
@@ -442,7 +427,7 @@ public final class PublicationContextMapper {
         if (issnList.size() > SIZE_ONE) {
             return new UnconfirmedSeries(generateUnconfirmedSeriesTitle(brageRecord), issnList.get(0), issnList.get(1));
         } else {
-            var issn = !issnList.isEmpty() ? issnList.get(0) : null;
+            var issn = !issnList.isEmpty() ? issnList.getFirst() : null;
             return new UnconfirmedSeries(generateUnconfirmedSeriesTitle(brageRecord), issn, null);
         }
     }
@@ -450,7 +435,7 @@ public final class PublicationContextMapper {
     private static String generateUnconfirmedSeriesTitle(Record brageRecord) {
         return Optional.ofNullable(brageRecord.getPublication())
                    .map(Publication::getPartOfSeries)
-                   .map(partOfSeriesValue -> partOfSeriesValue.split(";")[0])
+                   .map(PartOfSeries::getName)
                    .orElse(null);
     }
 
